修复：切换城市页面快速滑动问题； 修复：快递查询数据错乱问题； 优化：找厕所页面在滑动地图刷新策略
